testing_transform2.ui

--- a/mandelbulber2/formula/ui/testing_transform2.ui
+++ b/mandelbulber2/formula/ui/testing_transform2.ui
@@ -132,6 +132,34 @@
     </widget>
    </item>
    <item>
+    <layout class="QGridLayout" name="gridLayout_69" columnstretch="0,0,0">
+     <property name="spacing">
+      <number>2</number>
+     </property>
+     <item row="1" column="2">
+      <widget class="QLabel" name="label_263">
+       <property name="text">
+        <string>Start at iteration:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledA_false">
+       <property name="text">
+        <string>tempA</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+       <property name="text">
+        <string>temp</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <widget class="MyGroupBox" name="groupCheck_analyticDE_enabled_false">
      <property name="title">
       <string>Analytic D&amp;E tweak controls</string>
