--- a/mandelbulber2/formula/ui/transf_de_controls.ui
+++ b/mandelbulber2/formula/ui/transf_de_controls.ui
@@ -37,13 +37,6 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label_132">
-     <property name="text">
-      <string>a) with log may have to turn of bailout check on log formula</string>
-     </property>
-    </widget>
-   </item>
-   <item>
     <widget class="QLabel" name="label_133">
      <property name="text">
       <string>b) may have to increase aux.DE offset below (for T&gt;difs)</string>
@@ -51,11 +44,60 @@
     </widget>
    </item>
    <item>
-    <layout class="QGridLayout" name="gridLayout_24" columnstretch="0,1">
-     <property name="spacing">
-      <number>2</number>
+    <layout class="QGridLayout" name="gridLayout_75" columnstretch="0,1">
+     <property name="topMargin">
+      <number>5</number>
      </property>
-     <item row="5" column="1">
+     <item row="1" column="1">
+      <widget class="MyComboBox" name="comboBox_combo4">
+       <item>
+        <property name="text">
+         <string>difsR</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Max Axis</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Hypotenuse</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Euclidean</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>distance function</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,1">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_123">
+       <property name="text">
+        <string>distance offset</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_126">
+       <property name="text">
+        <string>aux.DE offset0</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
       <widget class="MyDoubleSpinBox" name="spinbox_analyticDE_offset_0">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -83,14 +125,7 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledB_false">
-       <property name="text">
-        <string>pk has rxy</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
+     <item row="0" column="1">
       <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_0">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -118,15 +153,8 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="0">
-      <widget class="QLabel" name="label_131">
-       <property name="text">
-        <string>int3x</string>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleA_1">
+     <item row="2" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox_analyticDE_scale_1">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -140,7 +168,7 @@
         <string/>
        </property>
        <property name="decimals">
-        <number>6</number>
+        <number>3</number>
        </property>
        <property name="minimum">
         <double>-99.989999999999995</double>
@@ -153,63 +181,159 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0" rowspan="2">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx">
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_127">
        <property name="text">
-        <string>euclidean</string>
+        <string>aux.DE scale1</string>
        </property>
       </widget>
      </item>
-     <item row="11" column="0">
+    </layout>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,1">
+     <item row="0" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy">
+       <property name="text">
+        <string>lin</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledB_false">
+       <property name="text">
+        <string>pk has rxy</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
        <property name="text">
         <string>log</string>
        </property>
       </widget>
      </item>
-     <item row="13" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
+     <item row="2" column="1">
+      <widget class="QLabel" name="label_132">
        <property name="text">
-        <string>pk/lin mix</string>
+        <string>a) with log may have to turn of bailout check on log formula</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_126">
+    </layout>
+   </item>
+   <item>
+    <widget class="MyGroupBox" name="groupCheck_transf_function_enabledM_false">
+     <property name="title">
+      <string>mi&amp;x options</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_14" stretch="0">
+      <property name="spacing">
+       <number>2</number>
+      </property>
+      <property name="leftMargin">
+       <number>2</number>
+      </property>
+      <property name="topMargin">
+       <number>2</number>
+      </property>
+      <property name="rightMargin">
+       <number>2</number>
+      </property>
+      <property name="bottomMargin">
+       <number>2</number>
+      </property>
+      <item>
+       <layout class="QGridLayout" name="gridLayout_76" columnstretch="0,1">
+        <property name="topMargin">
+         <number>5</number>
+        </property>
+        <item row="1" column="1">
+         <widget class="MyComboBox" name="comboBox_combo3">
+          <item>
+           <property name="text">
+            <string>lin - log mix</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>pk - lin mix</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>log - pk mix</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_128">
+          <property name="text">
+           <string>mix scale</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_11">
+          <property name="text">
+           <string>function</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_1">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="prefix">
+           <string/>
+          </property>
+          <property name="suffix">
+           <string/>
+          </property>
+          <property name="decimals">
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-99.989999999999995</double>
+          </property>
+          <property name="maximum">
+           <double>99.989999999999995</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout_4" columnstretch="0,1">
+     <item row="0" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
        <property name="text">
-        <string>aux.DE offset0 increase</string>
+        <string>difsR condition</string>
        </property>
       </widget>
      </item>
-     <item row="12" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_1">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="prefix">
-        <string/>
-       </property>
-       <property name="suffix">
-        <string/>
-       </property>
-       <property name="decimals">
-        <number>6</number>
-       </property>
-       <property name="minimum">
-        <double>-99.989999999999995</double>
-       </property>
-       <property name="maximum">
-        <double>99.989999999999995</double>
-       </property>
-       <property name="singleStep">
-        <double>0.100000000000000</double>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_131">
+       <property name="text">
+        <string>int3x</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
+     <item row="1" column="1">
       <widget class="MySpinBox" name="spinboxInt_transf_int_3_X">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -228,94 +352,10 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="label_120">
-       <property name="text">
-        <string>aux.DE0 difs R offset0 increase</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy">
-       <property name="text">
-        <string>lin</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0" rowspan="2">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy_false">
-       <property name="text">
-        <string>max axis</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1" rowspan="2">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx_false">
-       <property name="text">
-        <string>difsR</string>
-       </property>
-      </widget>
-     </item>
-     <item row="12" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
-       <property name="text">
-        <string>log/lin mix</string>
-       </property>
-      </widget>
-     </item>
-     <item row="14" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledF_false">
-       <property name="text">
-        <string>log/pk mix</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
-       <property name="text">
-        <string>difsR condition</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1" rowspan="2">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
-       <property name="text">
-        <string>hypotenuse</string>
-       </property>
-      </widget>
-     </item>
-     <item row="14" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleB_1">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="prefix">
-        <string/>
-       </property>
-       <property name="suffix">
-        <string/>
-       </property>
-       <property name="decimals">
-        <number>6</number>
-       </property>
-       <property name="minimum">
-        <double>-99.989999999999995</double>
-       </property>
-       <property name="maximum">
-        <double>99.989999999999995</double>
-       </property>
-       <property name="singleStep">
-        <double>0.100000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="0" colspan="2">
+     <item row="2" column="0" colspan="2">
       <widget class="QLabel" name="label_135">
        <property name="text">
-        <string>if i &lt; then dist = dd/de when i&gt; then dist = constant last dd/de</string>
+        <string>if i &lt; then dist = rd/de, when i&gt; then dist = constant last rd/de</string>
        </property>
       </widget>
      </item>
@@ -518,6 +558,11 @@
    <class>MyCheckBox</class>
    <extends>QCheckBox</extends>
    <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyComboBox</class>
+   <extends>QComboBox</extends>
+   <header>my_combo_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
