--- a/mandelbulber2/formula/ui/pseudo_kleinian_std_de.ui
+++ b/mandelbulber2/formula/ui/pseudo_kleinian_std_de.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>pseudo_kleinian_std_de</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -43,6 +43,16 @@
     <widget class="QLabel" name="label_268">
      <property name="text">
       <string>Note 2): The termination condition is reached when iteration reaches Maxiter.</string>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_269">
+     <property name="text">
+      <string>Note 3): For Delta DE, force Pseudo Kleinian distance estimation function</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
